--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
         crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
     <link rel="stylesheet" href="style.css">
     <title>Poutine on the Ritz</title>
 </head>
@@ -20,10 +20,6 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#menu">Menu</a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link" href="#book">Book the Truck</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#contact">Contact</a>
@@ -43,15 +39,23 @@
                 <section>
                     <div class="map">
                         <h3>Where's the Truck?</h3>
+
+                        <p>Our usual locations are:</p>
+                        <ul>
+                            <li>Denver Tech Center: 11am-1pm (M-F)</li>
+                            <li>Downtown Denver: 5pm-10pm (7 days a week)</li>
+                        </ul>
+
                         <div id="map">
                         </div>
+
                     </div>
                 </section>
                 <section id="menu">
                     <div class="menu">
                         <h3>Menu</h3>
                         <ul>
-                            <li>Regular Poutine</li>
+                            <li>Classic Poutine</li>
                             <p>-Fries, Gravy, Curds. </p>
                             <p>Simple and Classic.</p>
                             <br>
@@ -69,20 +73,29 @@
                         </ul>
                     </div>
                 </section>
-                <section id="book">
-                    <div class="book">
-                        <h3>book</h3>
-                        <p>Date: <input type="text" id="datepicker"></p>
-                    </div>
-                </section>
                 <section id="contact">
                     <div class="contact">
                         <h3>Contact</h3>
+                        <p>Phone: 555-5555</p>
+                        <p>Email: poutinetruckdenver@email.com</p>
+                        <br>
+                        <h4>Want to book the truck? Fill out the form:</h4>
+                        <h4>Name: <input type="text" id="name"></h4>
+                        <h4>Email: <input type="text" id="email"></h4>
+                        <h4>Phone #: <input type="text" id="phone"></h4>
+                        <h4>Message: <textarea rows="2" cols="25" id="message"></textarea></h4>
+                        <h4>Date: <input type="text" id="datepicker"></h4>
+                        <input type="submit" id="submit">
+                        <br>
+
                     </div>
                 </section>
                 <section id="about">
                     <div class="about">
                         <h3>About</h3>
+                        <p>Poutine on the Ritz was created in 2019 by Bryan and Amanda Nishi.<br>
+                            After visiting Quebec they decided to open a poutine food truck.<br>
+                            The End!</p>
                     </div>
                 </section>
             </div>
@@ -94,11 +107,19 @@
         crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
+    <script src="pikaday.js"></script>
+    <script>
+        var picker = new Pikaday({
+            field: document.getElementById('datepicker')
+        });
+    </script>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyChORehJHrcCOXjXgCu860roDAZSJDKRbY&callback=initMap">
     </script>
-     <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
-     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+
+
     <script src="js/app.js" type="text/javascript"></script>
 </body>
 
