--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/pikaday/css/pikaday.css">
@@ -13,100 +15,100 @@
 </head>
 
 <body>
-    <div class="bg">
-        <ul class="nav nav-tabs justify-content-center">
-            <li class="nav-item">
-                <a class="nav-link" href="#map">Where's the Truck?</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#menu">Menu</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#contact">Contact</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#about">About</a>
-            </li>
-        </ul>
+    <div class="banner">
         <div class="container">
-
-            <div class="content">
-                <div class="welcome">
-                    <h1>Poutine on the Ritz Foodtruck</h1>
-                    <h2>Serving the Denver Metro Area</h2>
+            <div class="row">
+                <div class="col-9">
+                    <h1>Proudly Serving The Denver Metro Area</h1>
                 </div>
+                <div class="col-3">
+                    <i class="fab fa-instagram"></i>
+                    <i class="fab fa-twitter-square"></i>
+                    <i class="fab fa-facebook"></i>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="bg2">
+        <img class="logo" src="./assets/images/Logo.png" alt="logo">
+
+    </div>
+
+    <div class="container">
+        <div class="bg1">
+            <div class="content">
+
                 <br>
-                <section>
-                    <div class="map">
-                        <h3>Where's the Truck?</h3>
+                <div class="row">
+                    <div class="col-6">
+                        <div class="map">
+                            <h3>Where's the Truck?</h3>
 
-                        <p>Our usual locations are:</p>
-                        <ul>
-                            <li>Denver Tech Center: 11am-1pm (M-F)</li>
-                            <li>Downtown Denver: 5pm-10pm (7 days a week)</li>
-                        </ul>
+                            <p>Our usual locations are:</p>
+                            <ul>
+                                <li>Denver Tech Center: 11am-1pm (M-F)</li>
+                                <li>Downtown Denver: 5pm-10pm (7 days a week)</li>
+                            </ul>
 
-                        <div id="map">
+                            <div id="map">
+                            </div>
                         </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="menu">
+                            <h3>Menu</h3>
+                            <ul>
+                                <li>Classic Poutine</li>
+                                <p>-Fries, Gravy, Curds. </p>
+                                <p>~Simple and Classic~</p>
+                                <br>
+                                <li>Southwest</li>
+                                <p>-Fries, Pork Green Chili, Montery Jack Curds</p>
+                                <p>~Colorado or New Mexico? Who cares? Just eat it~</p>
+                                <br>
+                                <li>Tikka Masala</li>
+                                <p>-Fries, Chicken, Masala, Paneer Cheese</p>
+                                <p>~Mild spice but full of flavor~</p>
+                                <br>
+                                <li>Chicken Pot Pie</li>
+                                <p>-Fries, Chicken, Gravy, Peas, Carrots</p>
+                                <p>~Comfort Food at it's best~</p>
+                                <br>
+                                <li>BBQ Pulled Pork</li>
+                                <p>-Fries, Marinated Pulled Pork, Gravy, Curds</p>
+                                <p>~Smokey and Savory~</p>
+                                <br>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="contact">
+                    <h3>Contact</h3>
+                    <p>Phone: (303)555-5555</p>
+                    <p>Email: poutinetruckdenver@gmail.com</p>
+                    <br>
+                    <h4>Want to book the truck? Fill out the form:</h4>
+                    <form action="mailto:poutinetruckdenver@gmail.com?subject=Truck Booking Request" method="post"
+                        enctype="text/plain" id="form">
+                        <p>Name:<input type="text" name="Name"></p>
+                        <p>Email:<input type="text" name="Email"></p>
+                        <p>Date: <input type="text" name="Date" id="datepicker"></p>
+                        <p>Notes: <textarea rows="4" cols="22" name="Notes"></textarea></p>
+                        <input type="submit" value="Submit">
+                    </form>
+                    <br>
+                </div>
 
-                    </div>
-                </section>
-                <section id="menu">
-                    <div class="menu">
-                        <h3>Menu</h3>
-                        <ul>
-                            <li>Classic Poutine</li>
-                            <p>-Fries, Gravy, Curds. </p>
-                            <p>~Simple and Classic~</p>
-                            <br>
-                            <li>Southwest</li>
-                            <p>-Fries, Pork Green Chili, Montery Jack Curds</p>
-                            <p>~Colorado or New Mexico? Who cares? Just eat it~</p>
-                            <br>
-                            <li>Tikka Masala</li>
-                            <p>-Fries, Chicken, Masala, Paneer Cheese</p>
-                            <p>~Mild spice but full of flavor~</p>
-                            <br>
-                            <li>Chicken Pot Pie</li>
-                            <p>-Fries, Chicken, Gravy, Peas, Carrots</p>
-                            <p>~Comfort Food at it's best~</p>
-                            <br>
-                            <li>BBQ Pulled Pork</li>
-                            <p>-Fries, Marinated Pulled Pork, Gravy, Curds</p>
-                            <p>~Smokey and Savory~</p>
-                            <br>
-                        </ul>
-                    </div>
-                </section>
-                <section id="contact">
-                    <div class="contact">
-                        <h3>Contact</h3>
-                        <p>Phone: (303)555-5555</p>
-                        <p>Email: poutinetruckdenver@gmail.com</p>
-                        <br>
-                        <h4>Want to book the truck? Fill out the form:</h4>
-                        <form action="mailto:poutinetruckdenver@gmail.com?subject=Truck Booking Request" method="post"
-                            enctype="text/plain" id="form">
-                            <p>Name:<input type="text" name="Name"></p>
-                            <p>Email:<input type="text" name="Email"></p>
-                            <p>Date: <input type="text" name="Date" id="datepicker"></p>
-                            <p>Notes: <textarea rows="4" cols="22" name="Notes"></textarea></p>
-                            <input type="submit" value="Submit">
-                        </form>
-                        <br>
-                    </div>
-                </section>
-                <section id="about">
-                    <div class="about">
-                        <h3>About</h3>
-                        <p>Poutine on the Ritz was created in 2019 by Bryan and Amanda Nishi.<br>
-                            After visiting Quebec they decided to open a poutine food truck.<br>
-                            The End!</p>
-                        <p>Pictures courtesy of <a href="https://www.denver.org" target="_blank"
-                                title="Visit Denver">Visit Denver</a>
-                        </p>
-                    </div>
-                </section>
+                <div class="about">
+                    <h3>About</h3>
+                    <p>Poutine on the Ritz was created in 2019 by Bryan and Amanda Nishi.<br>
+                        After visiting Quebec they decided to open a poutine food truck.<br>
+                        The End!</p>
+                    <p>Pictures courtesy of <a href="https://www.denver.org" target="_blank" title="Visit Denver">Visit
+                            Denver</a>
+                    </p>
+                </div>
+
             </div>
         </div>
     </div>
@@ -119,7 +121,6 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous">
     </script>
-
     <script src="https://cdn.jsdelivr.net/npm/pikaday/pikaday.js"></script>
     <script src="pikaday.js"></script>
     <script>
