redesign mock up
rough draft, still need to add real logo and get feedback

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-9">
-                    <h1>Proudly Serving The Denver Metro Area</h1>
+                    <h3>Proudly Serving The Denver Metro Area</h3>
                 </div>
                 <div class="col-3">
                     <i class="fab fa-instagram"></i>
@@ -33,15 +33,16 @@
         <img class="logo" src="./assets/images/Logo.png" alt="logo">
 
     </div>
+    <div class="bg1">
+        <div class="container">
 
-    <div class="container">
-        <div class="bg1">
             <div class="content">
 
                 <br>
                 <div class="row">
                     <div class="col-6">
                         <div class="map">
+
                             <h3>Where's the Truck?</h3>
 
                             <p>Our usual locations are:</p>
@@ -101,12 +102,14 @@
 
                 <div class="about">
                     <h3>About</h3>
-                    <p>Poutine on the Ritz was created in 2019 by Bryan and Amanda Nishi.<br>
-                        After visiting Quebec they decided to open a poutine food truck.<br>
-                        The End!</p>
-                    <p>Pictures courtesy of <a href="https://www.denver.org" target="_blank" title="Visit Denver">Visit
-                            Denver</a>
-                    </p>
+                    <p>Poutine on the Ritz was created in 2019 by Bryan and Amanda Nishi. After visiting Quebec they
+                        decided to open a poutine food truck.
+
+                        <p>Pictures courtesy of <a href="https://www.denver.org" target="_blank"
+                                title="Visit Denver">Visit
+                                Denver</a> and <a href="https://cater2.me/blog/" target="_blank"
+                                title="Cater2me Blog">Cater2me Blog</a>
+                        </p>
                 </div>
 
             </div>
