--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
     </div>
     <div class="bg2">
-        <img class="logo" src="./assets/images/Logo.png" alt="logo">
+        <img class="logo" src="./assets/images/Logo2.png" alt="logo">
 
     </div>
     <div class="bg1">
@@ -57,7 +57,7 @@
                     </div>
                     <div class="col-6">
                         <div class="menu">
-                            <h3>Menu</h3>
+                            <h3><b>PLAYBILL</b></h3>
                             <ul>
                                 <li>Classic Poutine</li>
                                 <p>-Fries, Gravy, Curds. </p>
